--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "restart": "pm2 restart SESSIONSCANNERt"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "npm i @itsukichan/baileys",
+    "@whiskeysockets/baileys": "npm:angularsockets",
     "@adiwajshing/keyed-db": "^0.2.4",
     "qrcode": "^1.5.3",
     "awesome-phonenumber": "^2.64.0",
